static/styles.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video, input, button {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
} /* CSS reset ends */

:root {
    --main-fg-color: rgb(31, 41, 35);
    --main-bg-color: rgb(227, 227, 227);
    --sec-bg-color: rgb(195, 195, 195);
}

@font-face {
    font-family: "Exo2";
    font-stretch: normal;
    font-style: normal;
    font-weight: 400;
    src: url(Exo2-VariableFont_wght.ttf);
}

@media all {
    html {
        font-family: 'Exo2';
    }

    body {
        display: flex;
        flex-direction: column;
        align-items: center;
        line-height: normal;
        width: 100%;
        min-height: 100svh;
        background-color: var(--main-bg-color);
    }

    div.content {
        width: max-content;
        max-width: 800px;
        margin: 20px;
    }

    footer {
        overflow: hidden;
        margin-top: auto;
        display: flex;
        flex-direction: row;
        justify-content: center;
        width: 100%;
    }

    footer > * {
        margin: 3px;
    }
}

/* Styles for name-form */
@media all {
    form {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 1em;
    }

    form input {
        color: var(--main-fg-color);
        border-color: var(--sec-bg-color);
        background-color: var(--sec-bg-color);
        border: 2px solid;
        border-radius: 0.3em;
        width: calc(100% - 4px);
        font-size: xx-large;
        text-align: center;
        transition: border-color 0.6s;
        transition: background-color 0.6s;
    }

    form input:valid {
        background-color: color-mix(in srgb, var(--sec-bg-color), lime 10%);
    }

    form input:user-valid {
        background-color: color-mix(in srgb, var(--sec-bg-color), lime 25%);
    }

    form input:invalid {
        background-color: color-mix(in srgb, var(--sec-bg-color), red 10%);
    }

    form input:user-invalid {
        border-color: color-mix(in srgb, var(--main-fg-color), red 50%);
        background-color: color-mix(in srgb, var(--sec-bg-color), red 10%);
    }

    form label {
        font-size: large;
    }

    form button {
        color: var(--main-fg-color);
        border-color: var(--sec-fg-color);
        background-color: var(--sec-bg-color);
        border: 2px solid;
        border-radius: 0.3em;
        width: fit-content;
        padding: 0.3em;
        font-size: large;
        text-align: center;
        transition: opacity 0.6s;
    }

    form button:disabled {
        opacity: 50%;
    }

    form button, form input {
        box-shadow: 2px 2px black;
    }
}

